--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2448,7 +2448,7 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 
 .phone-container{
     margin-top: 68px;
-    padding: 0 22px 0 10px;
+    /*padding: 0 22px 0 10px;*/
     height: 252px;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -2460,7 +2460,7 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
     padding:0px 8px;
     background: #28a3ef;
     border-radius: 10px;
-    margin: 15px 0px 15px 15px;
+    margin: 15px 5px 15px 20px;
     word-break: break-all;
 }
 
