--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -409,7 +409,7 @@
                     <!--表格查询条件begin-->
                     <!--<div class="searchbody">-->
                         <form class="layui-form" method="post" action="" tableid="tableReload" id="formRule" lay-filter="member_sms">
-                            <table class="layui-table table-border  dashed-td" lay-skin="line" lay-size="sm" style="margin-bottom: 15px">
+                            <table  style="margin-bottom: 0px !important;" class="layui-table table-border  dashed-td" lay-skin="line" lay-size="sm" style="margin-bottom: 15px">
                                 <colgroup>
                                     <col class="yty_tdright" width="120px">
                                     <col class="yty_tdright">
@@ -537,8 +537,8 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="yty_tdleft"> 筛选操作 :</td>
-                                    <td class="yty_tdright">
+                                    <td class="yty_tdleft"  style="border-bottom: none !important;"> 筛选操作 :</td>
+                                    <td class="yty_tdright"  style="border-bottom: none !important;">
                                         <button type="submit" lay-submit="" lay-filter="" class="layui-btn yty-btn  layui-btn-primary btn-primary-border layui-btn-sm btn-embossed">查询</button>
                                         <button type="reset" class="layui-btn layui-btn-sm  layui-btn-primary btn-primary-border yty-btn btn-embossed">重置</button>
                                     </td>
