--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -398,10 +398,13 @@
                                         <div class="layui-inline yty-form">
                                         <span>订单中</span>
                                             <div class="layui-input-inline">
-                                            <select name="modules" lay-verify="required" lay-search=""><option value="1">包含</option><option value="0">不包含</option></select>
+                                                <select name="modules" lay-verify="required" lay-search="">
+                                                    <option value="1">包含</option>
+                                                    <option value="0">不包含</option>
+                                                </select>
                                             </div>
                                         <span>指定商品</span>
-                                            <button type="button" name="" id="" placeholder="" autocomplete="off" class="layui-btn layui-btn-sm  layui-btn-primary">默认不选择商品</button>
+                                            <button type="button" name="" id="" placeholder="" autocomplete="off" class="layui-btn layui-btn-primary btn-primary-border layui-btn-sm btn-embossed">默认不选择商品</button>
                                         </div>
                                         <br>
                                         <p class="marginbuttom5"></p>
