--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1665,7 +1665,8 @@ body .layui-layer-we{
 .layui-input, .layui-select, .layui-textarea,.layui-form-label,.layui-input-inline,.xm-input,.xm-select{
     height: 30px !important;
     line-height: 30px !important;
-    border: 1px solid #d1d1d1;
+    border: 1px solid #BFBFBF;
+    border-radius: 4px !important;
     /*padding: 2px !important;*/
 }
 
@@ -2236,7 +2237,7 @@ tr>td.yty_tdright {
 tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdright .layui-textarea, tr>td.yty_tdright>.xm-select {
     width: 150px;
     /*background: #f5f7bb;*/
-    border:1px solid #d1d1d1;
+    border:1px solid #BFBFBF;
     display: inline;
 }
 
@@ -2263,10 +2264,10 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 
 .yty-checkbox li{
     float: left;
-    border: 1px solid #d1d1d1;
+    border: 1px solid #BFBFBF;
     margin-left: 10px;
-    padding: 2px 10px 0px 10px;
-    border-radius: 2px;
+    padding: 2px 13px 0px 13px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
@@ -2317,7 +2318,7 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
     border-radius: 2px;
 }
 
-.yty-form li.checkbox-active{
+.checkbox-active{
     border: 1px solid #506def !important;
 }
 
@@ -2557,4 +2558,8 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
     border: 1px solid #e5e5e5;
     border-radius: 8px;
     padding: 20px;
+}
+
+.layui-select-title .layui-input{
+    border: none !important;
 }
