--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1661,15 +1661,19 @@ body .layui-layer-we .layui-layer-setwin {
 body .layui-layer-we{
     border-radius:4px;
 }
-
-.layui-input,.layui-unselect, .layui-select, .layui-textarea,.layui-form-label,.layui-input-inline,.xm-input,.xm-select{
+/**
+,.layui-unselect
+ */
+.layui-input, .layui-select, .layui-textarea,.layui-form-label,.layui-input-inline,.xm-input,.xm-select{
     height: 30px !important;
     line-height: 30px !important;
     border: 1px solid #BFBFBF;
     border-radius: 4px !important;
     /*padding: 2px !important;*/
 }
-
+.layui-select-title .layui-input,.layui-select-title .layui-unselect,.layui-select-title .layui-select{
+    /*border: 1px solid #BFBFBF;*/
+}
 .layui-field-title {
     margin: 0px 10px;
 }
